--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,9 @@
 @import "base/grids";
 @import "base/typography";
 
+@import "layout/head";
+@import "layout/foot";
+
+@import "components/article";
+
 
