--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,14 +1,14 @@
 /*Colors*/
 $primary-color: #e26d3f;
 $secondary-color: #6b4cc0;
-$tertiary-color: #e2c4eb;
+$tertiary-color: #f1def6;
 $footer-color: #353535;
 $restaurant-color: #f6f6f6;
 $restaurant-color-darken:darken(#f6f6f6,5%);
 $card-gradiant:linear-gradient($secondary-color, $primary-color);
 
 /*font sizes*/
-$title-size:2.5rem;
+$title-size:2.2rem;
 $secTitle-size:1.6rem;
 $tiercTitle-size:1.05rem;
 $paragraph-size:1.05rem;
