--- a/scss/components/_article.scss
+++ b/scss/components/_article.scss
@@ -1,8 +1,14 @@
 .article
 {
     width: 90%;
-    height: 300px;
+    height: 320px;
     background-color: $tertiary-color;
     margin-top: 20px;
     @include pageMargin;
+    &__img
+    {
+        object-fit: cover;
+        width: 100%;
+        height: 60%;
+    }
 }
