--- a/scss/components/_article.scss
+++ b/scss/components/_article.scss
@@ -1,14 +1,29 @@
 .article
 {
     width: 90%;
-    height: 320px;
+    height: 400px;
     background-color: $tertiary-color;
-    margin-top: 20px;
+    margin-top: 5%;
     @include pageMargin;
     &__img
     {
         object-fit: cover;
         width: 100%;
-        height: 60%;
+        height: 50%;
+    }
+    &__name
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    &__price
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    &__descrptn
+    {
+        @include pageMargin;
+        @include textMargin;
     }
 }
