--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -5,4 +5,65 @@
     height: 650px;
     margin-top: 5%;
     @include pageMargin;
+    &__img
+    {
+        object-fit: cover;
+        width: 100%;
+        height: 50%;
+    }
+    &__name
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    &__price
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    &__select
+    {
+        height: 25px;
+        color:darken($tertiary-color, $amount:55);
+        background-color: darken($tertiary-color, $amount:10);
+        border: none;
+    }
+    &__description
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    label
+    {
+        @include pageMargin;
+        @include textMargin;
+    }
+    &__container
+    {
+        @include pageMargin;
+        height: 15%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        
+    }
+    &__container__button--add
+    {
+        width: 150px;
+        height: 50px;
+        color:darken($tertiary-color, $amount:55);
+        background-color: darken($tertiary-color, $amount:10);
+        box-shadow: 0px 5px darken($tertiary-color, $amount:20);
+        border: none;
+    }
+    &__container__button--buy
+    {
+        width: 130px;
+        height: 50px;
+        color:darken($tertiary-color, $amount:55);
+        background-color: darken($tertiary-color, $amount:10);
+        box-shadow: 0px 5px darken($tertiary-color, $amount:20);
+        border: none;
+    }
+    
 }
