Displaying product in basket is working

--- a/scss/components/_basket.scss
+++ b/scss/components/_basket.scss
@@ -12,5 +12,19 @@
         width: 20%;
         height: 100%;
     }
+    &__description
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 60%;
+    }
+    &__quantity
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 20%;
+    }
 
 }
