--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -1,85 +1,75 @@
-.product
-{
-    background-color: $tertiary-color;
-    width: 90%;
-    height: 650px;
-    margin-top: 5%;
+.product {
+  background-color: $tertiary-color;
+  width: 90%;
+  height: 650px;
+  margin-top: 5%;
+  @include pageMargin;
+  &__img {
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+  }
+  &__name {
     @include pageMargin;
-    &__img
-    {
-        object-fit: cover;
-        width: 100%;
-        height: 50%;
+    @include textMargin;
+  }
+  &__price {
+    @include pageMargin;
+    @include textMargin;
+  }
+  &__select {
+    height: 25px;
+    color: darken($tertiary-color, $amount: 55);
+    background-color: darken($tertiary-color, $amount: 10);
+    border: none;
+  }
+  &__description {
+    @include pageMargin;
+    @include textMargin;
+  }
+  label {
+    @include pageMargin;
+    @include textMargin;
+  }
+  &__container {
+    @include pageMargin;
+    height: 15%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  button {
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.03);
+      transition: 0.5s;
     }
-    &__name
-    {
-        @include pageMargin;
-        @include textMargin;
+    &:active {
+      transform: scale(0.97);
+      color: darken($tertiary-color, $amount: 10);
+      background-color: darken($tertiary-color, $amount: 55);
+      transition: 0.1s;
     }
-    &__price
-    {
-        @include pageMargin;
-        @include textMargin;
-    }
-    &__select
-    {
-        height: 25px;
-        color:darken($tertiary-color, $amount:55);
-        background-color: darken($tertiary-color, $amount:10);
-        border: none;
-    }
-    &__description
-    {
-        @include pageMargin;
-        @include textMargin;
-    }
-    label
-    {
-        @include pageMargin;
-        @include textMargin;
-    }
-    &__container
-    {
-        @include pageMargin;
-        height: 15%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        
-    }
-    button 
-    {
-        &:hover
-        {
-            cursor: pointer;
-            transform: scale(1.03);
-            transition: 0.5s;
-        }
-        &:active
-        {
-            transform: scale(0.97);
-            color:darken($tertiary-color, $amount:10);
-            background-color: darken($tertiary-color, $amount:55);
-            transition: 0.1s;
-        }
-    }
-    &__container__button--add
-    {
-        width: 150px;
-        height: 50px;
-        color:darken($tertiary-color, $amount:55);
-        background-color: darken($tertiary-color, $amount:10);
-        box-shadow: 0px 5px darken($tertiary-color, $amount:20);
-        border: none;
-    }
-    &__container__button--buy
-    {
-        width: 130px;
-        height: 50px;
-        color:darken($tertiary-color, $amount:55);
-        background-color: darken($tertiary-color, $amount:10);
-        box-shadow: 0px 5px darken($tertiary-color, $amount:20);
-        border: none;
-    }
-    
+  }
+  &__container__button--add {
+    width: 150px;
+    height: 50px;
+    color: darken($tertiary-color, $amount: 55);
+    background-color: darken($tertiary-color, $amount: 10);
+    box-shadow: 0px 5px darken($tertiary-color, $amount: 20);
+    border: none;
+  }
+  &__container__button--buy {
+    width: 130px;
+    height: 50px;
+    color: darken($tertiary-color, $amount: 55);
+    background-color: darken($tertiary-color, $amount: 10);
+    box-shadow: 0px 5px darken($tertiary-color, $amount: 20);
+    border: none;
+  }
+  @include screen-desktop {
+    width: 50%;
+    height: 570px;
+    margin: auto;
+  }
 }
