--- a/scss/components/_orderValidate.scss
+++ b/scss/components/_orderValidate.scss
@@ -31,8 +31,8 @@
       @include itemCenter;
       height: 100%;
       padding-top: 0px;
-      margin-left: none;
-      margin-right: none;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
