--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,74 +1,67 @@
-@mixin itemCenter 
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@mixin itemCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-@mixin itemCenterColumn 
-{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+@mixin itemCenterColumn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@mixin pageMargin
-{
-    margin-left: 5%;
-    margin-right:5%;
+@mixin pageMargin {
+  margin-left: 5%;
+  margin-right: 5%;
 }
 @mixin textMargin {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 @mixin desktopMargin {
-    width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 @mixin tabletMargin {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-
-@mixin restauCards
-{
-    display: flex;
-    border-radius: 20px;
-    box-shadow: $card-shadow;
-    width: 90%;
-    height: 250px;
+@mixin restauCards {
+  display: flex;
+  border-radius: 20px;
+  box-shadow: $card-shadow;
+  width: 90%;
+  height: 250px;
 }
 
-@mixin imgRestauCards
-{
-    object-fit: cover;
-    width: 100%;
-    height: 175px;
+@mixin imgRestauCards {
+  object-fit: cover;
+  width: 100%;
+  height: 175px;
 }
 
-@mixin newCard 
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: green;
-    background-color: $tertiary-color;
-    border-radius: 2px;
-    width: 80px;
-    height: 30px;
-    font-size: 1em;
+@mixin newCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: green;
+  background-color: $tertiary-color;
+  border-radius: 2px;
+  width: 80px;
+  height: 30px;
+  font-size: 1em;
 }
 
-@mixin screen-desktop{
-    @media screen and (min-width: $media-desktop){
-        @content;
-    }
+@mixin screen-desktop {
+  @media screen and (min-width: $media-desktop) {
+    @content;
+  }
 }
 
-@mixin screen-tablet{
-    @media screen and (min-width: $media-mobile) and (max-width: $media-tablet){
-        @content;
-    }
+@mixin screen-tablet {
+  @media screen and (min-width: $media-mobile) and (max-width: $media-tablet) {
+    @content;
+  }
 }
